tests/invalid/generated_binop_sub_none_bytearray/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: None = None
    y: bytearray = bytearray(b"hello")
    z = x - y
